@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load url from future %}
-<div class="answerID{{ entry.pk }}">
-    <p>{% trans "Rating" %}: <span class="ratingID{{ entry.pk }}">{{ entry.rating }}</span></p>
+<div data-answer-id="{{ entry.pk }}">
+    <p>{% trans "Rating" %}: <span data-id="rating-id{{ entry.pk }}">{{ entry.rating }}</span></p>
     <p>{{ entry.answer }}</p>
     {% if not entry.pk in rated_entries or feedback_entry == entry.pk %}
         {% include "frequently/partials/feedback.html" with object=entry %}
