@@ -1,14 +1,14 @@
 {% load i18n %}
 {% if feedback.validation == 'N' %}
-<div class="feedbackForm">
-    <p>{% trans "Thanks for your vote. Please send a small feedback. This will be highly appreciated!" %}</p>
-    <textarea name="remark"></textarea>
-    <p><input class="sendFeedback" type="submit" name="feedback{{ feedback.id }}" value="{% trans "Send feedback" %}" /></p>
-</div>
+    <div data-class="feedback-form">
+        <p>{% trans "Thanks for your vote. Please send a small feedback. This will be highly appreciated!" %}</p>
+        <textarea name="remark"></textarea>
+        <p><input data-class="send-feedback type="submit" name="feedback{{ feedback.id }}" value="{% trans "Send feedback" %}" /></p>
+    </div>
 {% endif %}
 {% if feedback.validation == 'P' %}
-<p>{% trans "Thanks for your vote!" %}</p>
+    <p>{% trans "Thanks for your vote!" %}</p>
 {% endif %}
 {% if feedback_send %}
-<p>{% trans "Thanks for your feedback!" %}</p>
+    <p>{% trans "Thanks for your feedback!" %}</p>
 {% endif %}
